<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.details.DetailsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSanskritName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:background="@color/s5"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:textSize="30sp"
        tools:text="@string/sample_sanskrit" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/s2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/txtAsanaType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/s1"
                        android:textSize="20sp"
                        tools:text="@string/sample_type" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtDfficulty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/difficulty_level"
                            android:textColor="@color/s1"
                            android:textSize="20sp" />


                        <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                            android:id="@+id/pbDifficultyLevel"
                            android:layout_width="60dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="10dp"
                            app:rcAnimationSpeedScale="3"
                            app:rcBackgroundColor="#0A000000"
                            app:rcProgressColor="@color/s3" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imgDone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1.5"
                    app:srcCompat="@drawable/ic_done"
                    app:tint="@color/uncompleted" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgAsana"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    app:tint="@color/gray"
                    tools:src="@drawable/ananda_balasana" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:text="@string/lorem_ipsum"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"/>

                <ImageView
                    android:id="@+id/imgReverse"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.75"
                    android:src="@drawable/ic_reverse"
                    app:tint="@color/gray" />

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:background="@color/s5"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/sample_name"
        android:textSize="30sp" />


</LinearLayout>
</layout>